<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_wifi_radio" />

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_ssid" />

        <TextView
            android:id="@+id/text_wifi_ssid"
            style="@style/TextViewDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signal_strength" />

        <TextView
            android:id="@+id/text_signal_strength"
            style="@style/TextViewDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip" />

        <TextView
            android:id="@+id/text_ip_address"
            style="@style/TextViewDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gateway" />

        <TextView
            android:id="@+id/text_gateway"
            style="@style/TextViewDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_mask" />

        <TextView
            android:id="@+id/text_ip_mask"
            style="@style/TextViewDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac" />

        <TextView
            android:id="@+id/text_mac_address"
            style="@style/TextViewDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>
    <include layout="@layout/view_divider" />
</LinearLayout>