<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sensor" />

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reflection" />

        <TextView
            android:id="@+id/text_reflection"
            style="@style/TextViewDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scan_period" />

        <Spinner
            android:id="@+id/spinner_scan_period"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sensor_reads" />

        <Spinner
            android:id="@+id/spinner_sensor_reads"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sensor_threshold" />

        <Spinner
            android:id="@+id/spinner_sensor_threshold"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />
</LinearLayout>