<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_door" />

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/door_motion_time" />

        <Spinner
            android:id="@+id/spinner_door_motion_time"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/relay_on_time" />

        <Spinner
            android:id="@+id/spinner_relay_on_time"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        style="@style/SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/relay_off_time" />

        <Spinner
            android:id="@+id/spinner_relay_off_time"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="ffffdfdfdffwefwfwef" />

    </LinearLayout>

    <include layout="@layout/view_divider" />
</LinearLayout>